# DoomLegacy2x

./: .clang-format  .gitignore  .gitmodules  CICDPlan.md  CMakeUpgradePlan.md  Dockerfile.linux  Dockerfile.windows  IncludeReorganizationPlan.md  Makefile  NETWORK_ARCHITECTURE.md  PERFORMANCE.md  PlatformAbstractionPlan.md  README-CI.md  README.md  TestFrameworkMigrationPlan.md  build.sh  ci-clang-mingw.sh  ci-linux.sh  ci-windows.sh  dehacked-research.md  dependencies.txt  test.sh  vulkan_research.md
legacy/trunk/: CLAUDE.md  CMakeLists.txt  Makefile  build-codeql.bat  build-codeql.sh  build.bat  build_error_summarizer.py  tools
legacy/trunk/audio/: CMakeLists.txt  audio.dep  qmus2mid.cpp  s_sndseq.cpp  s_sound.cpp  sounds.cpp
legacy/trunk/build-mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
legacy/trunk/build-mingw/engine/: Makefile  cmake_install.cmake
legacy/trunk/build-mingw/grammars/: Makefile  cmake_install.cmake  decorate.lexer.c  decorate.parser.c  decorate.parser.h  decorate.parser.out  ntexture.lexer.c  ntexture.parser.c  ntexture.parser.h  ntexture.parser.y
legacy/trunk/build-mingw/interface/: Makefile  cmake_install.cmake
legacy/trunk/build-mingw/net/: Makefile  cmake_install.cmake
legacy/trunk/build-mingw/util/: Makefile  cmake_install.cmake
legacy/trunk/build-mingw/video/: Makefile  cmake_install.cmake
legacy/trunk/cmake/: clang-mingw-w64-x86_64.cmake  mingw-w64-x86_64.cmake
legacy/trunk/docs/: BUGS.html  JDS_MAPINFO.html  TODO.html  compiling.html  compiling.md  console.html  editing.html  editing.md  elements.html  elements.md  example.deh  features.html  features.md  fsbasic.html  legacy.html  menu_audit.md  source.html  source.md
legacy/trunk/engine/: CMakeLists.txt  a_action.cpp  ai_mobjinfo.cpp  ai_states.cpp  d_items.cpp  d_main.cpp  dstrings.cpp  engine.dep  g_actor.cpp  g_decorate.cpp  g_demo.cpp  g_game.cpp  g_input.cpp  g_level.cpp  g_map.cpp  g_mapinfo.cpp  g_pawn.cpp  g_player.cpp  g_state.cpp  g_team.cpp  g_think.cpp  g_type.cpp  gl_bsp.cpp  gl_bsp.h  m_cheat.cpp  p_camera.cpp  p_ceilng.cpp  p_doors.cpp  p_effects.cpp  p_enemy.cpp  p_events.cpp  p_fab.cpp  p_floor.cpp  p_genlin.cpp  p_hacks.cpp  p_henemy.cpp  p_hpspr.cpp  p_inter.cpp  p_lights.cpp  p_map.cpp  (+17 more)
legacy/trunk/engine/automap/: am_map.cpp
legacy/trunk/engine/bots/: acbot.cpp  b_bot.cpp  b_path.cpp
legacy/trunk/engine/finale/: f_finale.cpp  wi_stuff.cpp
legacy/trunk/engine/hud/: hu_stuff.cpp  st_lib.cpp  st_stuff.cpp
legacy/trunk/engine/menu/: menu.cpp  menu_helpers.h  menudef.h  widget.cpp  widget.h
legacy/trunk/engine/scripting/: acs.cpp  t_func.cpp  (+6 more)
legacy/trunk/grammars/: CMakeLists.txt  decorate.lexer.c  lemon  ntexture.cpp  ntexture.lexer.c  parser_driver.h
legacy/trunk/include/: a_functions.h  acbot.h  am_map.h  b_bot.h  b_path.h  command.h  console.h  cvars.h  d_debug.h  d_french.h  d_items.h  d_main.h  dehacked.h  dictionary.h  doomdata.h  dstrings.h  f_finale.h  filesrch.h  functors.h  g_actor.h  g_blockmap.h  g_decorate.h  g_game.h  g_input.h  g_level.h  g_map.h  g_mapinfo.h  g_pawn.h  g_player.h  g_team.h  g_think.h  g_type.h  gl_bsp.h  hud.h  i_net.h  i_sound.h  i_system.h  i_video.h  info.h  keys.h  (+61 more)
legacy/trunk/include_stubs/: tnl_stub.h  tnl_stub.h.backup
legacy/trunk/interface/: CMakeLists.txt
legacy/trunk/net/: ActorNetworkSerializer.cpp  ActorNetworkSerializer.h  BitStreamSerializer.cpp  BitStreamSerializer.h  CMakeLists.txt  ENetNetworkTransport.cpp  ENetNetworkTransport.h  NetworkManager.cpp  NetworkManager.h  PlayerInfoNetworkSerializer.cpp  PlayerInfoNetworkSerializer.h  TNLNetworkTransport.cpp  TNLNetworkTransport.h  cl_main.cpp  n_connection.cpp  n_interface.cpp  net.dep  network_provider_adapter.cpp  sv_cmds.cpp  sv_main.cpp
legacy/trunk/resources/: A_DMG2.lmp  A_DMG3.lmp  BLUDA0.lmp  BLUDB0.lmp  BRDR_MT.lmp  CONSBACK.lmp  CREDIT.lmp  DSOUCH.lmp  FS_things.h  M_SINGLE.lmp  M_SLIDEC.lmp  M_SLIDER.lmp  RSKY1.lmp  RSKY2.lmp  SBOAMMO1.lmp  SBOAMMO4.lmp  SBOAMMO5.lmp  SBOAMMO8.lmp  SBOFRAGS.lmp  SMOKA0.lmp  SMOKC0.lmp  SMOKD0.lmp  SMOKE0.lmp  SNDINFO.lmp  SNDINFO.txt  SNDSEQ.lmp  SPLAB0.lmp  SPLAC0.lmp  THINGS.H.lmp  TNT1A0.lmp  TRANSFX1.lmp  TRANSMED.lmp  TRANSMOR.lmp  WATER0.lmp  WATER1.lmp  WATER6.lmp  WATER7.lmp  legacy.wad  legacy.wad.inventory
legacy/trunk/scripts/: smoke_test.sh
legacy/trunk/test/: test_runner.py
legacy/trunk/tests/: CMakeLists.txt
legacy/trunk/tnl/: tnlAssert.h  tnlAsymmetricKey.h  tnlNetInterface.h
legacy/trunk/util/: CMakeLists.txt  command.cpp  console.cpp  dehacked.cpp  m_archive.cpp  m_argv.cpp  m_bbox.cpp  m_dll.cpp  m_fixed.cpp  m_misc.cpp  m_random.cpp  m_swap.cpp  md5.cpp  mnemonics.cpp  parser.cpp  tables.cpp  util.dep  vfile.cpp  w_wad.cpp  wad.cpp  z_ascache.cpp  z_cache.cpp  z_zone.cpp
legacy/trunk/video/: CMakeLists.txt  jpeg.cpp  png.cpp  r_anim.cpp  r_bsp.cpp  r_data.cpp  r_draw.cpp  r_draw16.cpp  r_draw8.cpp  r_font.cpp  r_main.cpp  r_plane.cpp  r_render.cpp  r_segs.cpp  r_sky.cpp  r_splats.cpp  r_sprite.cpp  r_things.cpp  renderer_provider_adapter.cpp  screen.cpp  v_video.cpp  video.dep
src/grammars/: CMakeLists.txt  lemon.c  parser_driver.cpp
src/interface/: CMakeLists.txt
src/interface/sdl/: i_cdmus.cpp  i_main.cpp  i_sound.cpp  i_system.cpp  i_video.cpp  input_provider_adapter.cpp  ogl_sdl.cpp  searchp.cpp
src/tests/: CMakeLists.txt  README.md
src/tests/integration/: test_network_integration.cpp  test_parity.cpp  test_save_load.cpp
src/tests/libraries/: CMakeLists.txt  mock_input_provider.cpp  mock_network_provider.cpp  mock_render.cpp  mock_sound_player.cpp  mock_wad.cpp
src/tests/unit/: test_acs.cpp  test_bot.cpp  test_bsp_compiler_gtest.cpp  test_bsp_traverser_gtest.cpp  test_components.cpp  test_console_stubs.cpp  test_cvar_gtest.cpp  test_fixed_catch2.cpp  test_fixed_t.cpp  test_fixed_t_gtest.cpp  test_mapinfo.cpp  test_menu_navigation.cpp  test_modern_cpp.cpp  test_network_provider_gtest.cpp  test_render_backend_gtest.cpp  test_renderer_gtest.cpp  test_video.cpp  test_wad_lump_reader.cpp
src/util_base/: CMakeLists.txt
(+574 files in other folders)
